Fix: rydder en del i sonar.