@@ -4,9 +4,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.mock;
 
 import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 import javax.inject.Inject;
 import javax.persistence.EntityManager;
@@ -31,21 +28,16 @@ import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.Foreldel
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.InternalManipulerBehandling;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.aksjonspunkt.AksjonspunktDefinisjon;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.aksjonspunkt.Venteårsak;
-import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.repository.BehandlingLås;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.repository.BehandlingRepository;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.repository.BehandlingRepositoryProvider;
-import no.nav.foreldrepenger.tilbakekreving.behandlingslager.feilutbetalingårsak.FaktaFeilutbetaling;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.feilutbetalingårsak.kodeverk.HendelseType;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.feilutbetalingårsak.kodeverk.HendelseUnderType;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.historikk.HistorikkAktør;
-import no.nav.foreldrepenger.tilbakekreving.behandlingslager.historikk.Historikkinnslag;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.testutilities.kodeverk.ScenarioSimple;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.totrinn.TotrinnRepository;
-import no.nav.foreldrepenger.tilbakekreving.behandlingslager.vilkår.VilkårVurderingEntitet;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.vilkår.VilkårVurderingPeriodeEntitet;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.vilkår.kodeverk.Aktsomhet;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.vilkår.kodeverk.VilkårResultat;
-import no.nav.foreldrepenger.tilbakekreving.behandlingslager.vurdertforeldelse.VurdertForeldelse;
 import no.nav.foreldrepenger.tilbakekreving.datavarehus.saksstatistikk.SendVedtakHendelserTilDvhTask;
 import no.nav.foreldrepenger.tilbakekreving.dbstoette.CdiDbAwareTest;
 import no.nav.vedtak.felles.prosesstask.api.ProsessTaskData;
@@ -54,7 +46,7 @@ import no.nav.vedtak.felles.prosesstask.api.ProsessTaskTjeneste;
 import no.nav.vedtak.felles.prosesstask.api.TaskType;
 
 @CdiDbAwareTest
-public class AutomatiskSaksbehandlingProsessTaskTest {
+class AutomatiskSaksbehandlingProsessTaskTest {
 
     private BehandlingRepositoryProvider repositoryProvider;
     private BehandlingRepository behandlingRepository;
@@ -69,13 +61,13 @@ public class AutomatiskSaksbehandlingProsessTaskTest {
     private Long behandlingId;
 
     @BeforeEach
-    public void setup(EntityManager entityManager) {
+    void setup(EntityManager entityManager) {
         repositoryProvider = new BehandlingRepositoryProvider(entityManager);
         behandlingRepository = repositoryProvider.getBehandlingRepository();
         totrinnRepository = new TotrinnRepository(entityManager);
 
 
-        BehandlingskontrollEventPubliserer behandlingskontrollEventPublisererMock = mock(BehandlingskontrollEventPubliserer.class);
+        var behandlingskontrollEventPublisererMock = mock(BehandlingskontrollEventPubliserer.class);
         behandlingskontrollTjeneste = new BehandlingskontrollTjeneste(new BehandlingskontrollServiceProvider(entityManager,
                 new BehandlingModellRepository(), behandlingskontrollEventPublisererMock));
 
@@ -92,8 +84,8 @@ public class AutomatiskSaksbehandlingProsessTaskTest {
     }
 
     @Test
-    public void skal_saksbehandle_automatisk() {
-        int antallKlareFør = taskTjeneste.finnAlle(ProsessTaskStatus.KLAR).size();
+    void skal_saksbehandle_automatisk() {
+        var antallKlareFør = taskTjeneste.finnAlle(ProsessTaskStatus.KLAR).size();
         automatiskSaksbehandlingProsessTask.doTask(lagProsesTaskData());
         behandling = behandlingRepository.hentBehandling(behandlingId);
         assertThat(behandling.isAutomatiskSaksbehandlet()).isTrue();
@@ -103,18 +95,19 @@ public class AutomatiskSaksbehandlingProsessTaskTest {
 
         var prosessTasker = taskTjeneste.finnAlle(ProsessTaskStatus.KLAR);
         assertThat(prosessTasker.size() - antallKlareFør).isEqualTo(3);
-        List<TaskType> prosessTaskNavn = prosessTasker.stream()
+        var prosessTaskNavn = prosessTasker.stream()
                 .map(ProsessTaskData::taskType)
-                .collect(Collectors.toList());
-        assertThat(prosessTaskNavn.contains(TaskType.forProsessTask(SendVedtaksbrevTask.class))).isFalse();
-        assertThat(prosessTaskNavn.contains(TaskType.forProsessTask(AvsluttBehandlingTask.class))).isTrue();
-        assertThat(prosessTaskNavn.contains(TaskType.forProsessTask(SendØkonomiTibakekerevingsVedtakTask.class))).isTrue();
-        assertThat(prosessTaskNavn.contains(TaskType.forProsessTask(SendVedtakHendelserTilDvhTask.class))).isTrue();
+                .toList();
 
-        Optional<FaktaFeilutbetaling> faktaFeilutbetalingData = repositoryProvider.getFaktaFeilutbetalingRepository()
+        assertThat(prosessTaskNavn).doesNotContain(TaskType.forProsessTask(SendVedtaksbrevTask.class))
+            .contains(TaskType.forProsessTask(AvsluttBehandlingTask.class))
+            .contains(TaskType.forProsessTask(SendØkonomiTibakekerevingsVedtakTask.class))
+            .contains(TaskType.forProsessTask(SendVedtakHendelserTilDvhTask.class));
+
+        var faktaFeilutbetalingData = repositoryProvider.getFaktaFeilutbetalingRepository()
                 .finnFaktaOmFeilutbetaling(behandlingId);
         assertThat(faktaFeilutbetalingData).isPresent();
-        FaktaFeilutbetaling faktaFeilutbetaling = faktaFeilutbetalingData.get();
+        var faktaFeilutbetaling = faktaFeilutbetalingData.get();
         assertThat(faktaFeilutbetaling.getBegrunnelse()).isEqualTo(
                 AutomatiskSaksbehandlingTaskProperties.AUTOMATISK_SAKSBEHANDLING_BEGUNNLESE);
         assertThat(faktaFeilutbetaling.getFeilutbetaltPerioder()
@@ -126,10 +119,10 @@ public class AutomatiskSaksbehandlingProsessTaskTest {
                 .allMatch(faktaFeilutbetalingPeriode -> HendelseUnderType.ANNET_FRITEKST.equals(
                         faktaFeilutbetalingPeriode.getHendelseUndertype()))).isTrue();
 
-        Optional<VurdertForeldelse> vurdertForeldelseData = repositoryProvider.getVurdertForeldelseRepository()
+        var vurdertForeldelseData = repositoryProvider.getVurdertForeldelseRepository()
                 .finnVurdertForeldelse(behandlingId);
         assertThat(vurdertForeldelseData).isPresent();
-        VurdertForeldelse vurdertForeldelse = vurdertForeldelseData.get();
+        var vurdertForeldelse = vurdertForeldelseData.get();
         assertThat(vurdertForeldelse.getVurdertForeldelsePerioder()
                 .stream()
                 .allMatch(vurdertForeldelsePeriode -> ForeldelseVurderingType.IKKE_FORELDET.equals(
@@ -140,10 +133,10 @@ public class AutomatiskSaksbehandlingProsessTaskTest {
                         vurdertForeldelsePeriode -> AutomatiskSaksbehandlingTaskProperties.AUTOMATISK_SAKSBEHANDLING_BEGUNNLESE.equals(
                                 vurdertForeldelsePeriode.getBegrunnelse()))).isTrue();
 
-        Optional<VilkårVurderingEntitet> vilkårsVurderingData = repositoryProvider.getVilkårsvurderingRepository()
+        var vilkårsVurderingData = repositoryProvider.getVilkårsvurderingRepository()
                 .finnVilkårsvurdering(behandlingId);
         assertThat(vilkårsVurderingData).isPresent();
-        VilkårVurderingEntitet vilkårVurderingEntitet = vilkårsVurderingData.get();
+        var vilkårVurderingEntitet = vilkårsVurderingData.get();
         assertThat(vilkårVurderingEntitet.getPerioder()
                 .stream()
                 .allMatch(periode -> VilkårResultat.FORSTO_BURDE_FORSTÅTT.equals(periode.getVilkårResultat()))).isTrue();
@@ -162,7 +155,7 @@ public class AutomatiskSaksbehandlingProsessTaskTest {
                 .stream()
                 .allMatch(VilkårVurderingPeriodeEntitet::tilbakekrevesSmåbeløp)).isFalse();
 
-        List<Historikkinnslag> historikkinnslager = repositoryProvider.getHistorikkRepository()
+        var historikkinnslager = repositoryProvider.getHistorikkRepository()
                 .hentHistorikk(behandlingId);
         assertThat(historikkinnslager.stream()
                 .allMatch(
@@ -172,7 +165,7 @@ public class AutomatiskSaksbehandlingProsessTaskTest {
     }
 
     @Test
-    public void skal_ikke_saksbehandle_automatisk_når_behandling_er_på_vent() {
+    void skal_ikke_saksbehandle_automatisk_når_behandling_er_på_vent() {
         behandlingskontrollTjeneste.settBehandlingPåVent(behandling,
                 AksjonspunktDefinisjon.VENT_PÅ_TILBAKEKREVINGSGRUNNLAG, BehandlingStegType.FAKTA_FEILUTBETALING,
                 LocalDateTime.now().plusDays(2), Venteårsak.AVVENTER_DOKUMENTASJON);
@@ -183,7 +176,7 @@ public class AutomatiskSaksbehandlingProsessTaskTest {
     }
 
     @Test
-    public void skal_ikke_saksbehandle_automatisk_når_behandling_er_allerede_avsluttet() {
+    void skal_ikke_saksbehandle_automatisk_når_behandling_er_allerede_avsluttet() {
         behandling.avsluttBehandling();
         automatiskSaksbehandlingProsessTask.doTask(lagProsesTaskData());
         assertThat(behandling.isAutomatiskSaksbehandlet()).isFalse();
@@ -191,9 +184,9 @@ public class AutomatiskSaksbehandlingProsessTaskTest {
     }
 
     @Test
-    public void skal_ikke_saksbehandle_automatisk_når_behandling_er_allerede_saksbehandlet() {
+    void skal_ikke_saksbehandle_automatisk_når_behandling_er_allerede_saksbehandlet() {
         behandling.setAnsvarligSaksbehandler("1234");
-        BehandlingLås behandlingLås = behandlingRepository.taSkriveLås(behandling);
+        var behandlingLås = behandlingRepository.taSkriveLås(behandling);
         behandlingRepository.lagre(behandling, behandlingLås);
 
         automatiskSaksbehandlingProsessTask.doTask(lagProsesTaskData());
@@ -203,7 +196,7 @@ public class AutomatiskSaksbehandlingProsessTaskTest {
     }
 
     private ProsessTaskData lagProsesTaskData() {
-        ProsessTaskData prosessTaskData = ProsessTaskData.forProsessTask(AutomatiskSaksbehandlingProsessTask.class);
+        var prosessTaskData = ProsessTaskData.forProsessTask(AutomatiskSaksbehandlingProsessTask.class);
         prosessTaskData.setBehandling(behandling.getFagsakId(), behandlingId, behandling.getAktørId().getId());
         return prosessTaskData;
     }
